# qt-file-system-explorer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake_single_platform.yml
debian/: changelog  control  copyright
debian/patches/: dirview.patch
src/: main.cpp
src/custom_sort_filter_proxy_model/: custom_sort_filter_proxy_model.cpp  custom_sort_filter_proxy_model.h
src/custom_system_model/: custom_system_model.cpp  custom_system_model.h
src/custom_system_model_delegate/: custom_system_model_delegate.cpp  custom_system_model_delegate.h
src/main_window/: main_window.cpp  main_window.h
src/utils/file_utils/: file_utils.cpp  file_utils.h
tests/src/test_file_utils/: test_file_utils.cpp  test_file_utils.h
tests/src/test_format_utils/: test_format_utils.cpp
